...
                          onPressed: () {
                            context.replaceRoute(SignInRoute());
                          },
                          backgroundColor: context.colorScheme.primary,
                          textStyle: context.textTheme.titleMedium
                              ?.copyWith(color: context.colorScheme.onPrimary),
                          text: 'Start Imagination',
                        ),
                      ),
                    ),
                  )
                : Align(
                    alignment: Alignment.bottomCenter,
...
                          controller.animateToPage(
                            2,
                            duration: const Duration(milliseconds: 500),
                            curve: Curves.easeIn,
                          );
                        },
                        text: 'Skip',
                      ),
                    ),
                  ),
          ),
        ],
      ),
...
