...
                            context.router.replaceAll([const BaseRoute()]);
                          });
                    },
                    backgroundColor: context.colorScheme.primary,
                    textStyle: context.textTheme.titleMedium
                        ?.copyWith(color: context.colorScheme.onPrimary),
                    text: 'Log In',
                  ),
                ),
              ),

              26.verticalSpace,
              Row(
...
